// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stats-with-reports.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "foo",
        },
      },
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-with-reports.json, 2`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "foo",
        },
      },
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "list",
                  ],
                },
                {
                  "data": [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-extensions.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-extensions.json, 2`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "list",
                  ],
                },
                {
                  "data": [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-meta.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-meta.json, 2`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "list",
                  ],
                },
                {
                  "data": [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-reports.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "foo",
        },
      },
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-reports.json, 2`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "foo",
        },
      },
      {
        "descriptor": {
          "adapter": undefined,
          "author": {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": {
          "compilations": [
            {
              "id": null,
              "reports": [
                {
                  "data": [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": [
                    "list",
                  ],
                },
                {
                  "data": [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;
